--- a/views/movie-selection.jade
+++ b/views/movie-selection.jade
@@ -2,7 +2,7 @@
 html
   head
     title 选择看过的电影
-    link(rel="stylesheet", href="/stylesheets/movie-selection.css")
+    link(rel="stylesheet", href="/css/movie-selection.css")
   body
     .movie-selection-container
       .header
